slideshow z-index correction

--- a/CSS/gallery/slideshow.css
+++ b/CSS/gallery/slideshow.css
@@ -10,6 +10,7 @@
   align-items: center;
   justify-content: center;
   background-color: rgba(0, 0, 0, 0.8);
+  z-index: 100;
 }
 
 .gallery-with-slideshow .fullscreen-slideshow .image {
